# vize

./: LICENSE  README.md
epoch/: CMakeLists.txt  README.md
epoch/CMakeModules/: dependencies.py  source_group_tree.cmake  target_libraries.cmake  thirdparty.cmake
epoch/ayla/: CMakeLists.txt  README.md
epoch/ayla/include/ayla/: api.hpp  config.hpp  debug_code.hpp  directory.hpp  dynamic_unique_cast.hpp  float.hpp  image.hpp  image_cube_map.hpp  interpolation.hpp  pair.hpp  scaler.hpp  sign.hpp  size_type.hpp  static_code.hpp  thread_pool.hpp
epoch/ayla/serialization_tests/: CMakeLists.txt  glm_serializer_test.cc  main.cc
epoch/ayla/src/ayla/: directory.cc  image.cc  image_cube_map.cc  scaler.cc  thread_pool.cc
epoch/ayla/tests/: CMakeLists.txt  axis_aligned_box.cc  float.cc  intersection.cc  line_segment.cc  main.cc  matrix3.cc  matrix4.cc  plane.cc  regular_grid_indexer.cc  rigid_transform.cc  thread_pool.cc  triangle.cc  triangle_mesh.cc  vector3.cc
epoch/ayla_gl/: CMakeLists.txt  README.md
epoch/ayla_gl/include/ayla_gl/: api.hpp  camera_to_viewport_ray.hpp  config.hpp  fps_camera.hpp  load_texture.hpp  print_opengl_error.hpp  skybox.hpp  texture_2d.hpp  texture_cube_map.hpp  trackball_camera.hpp  world_to_ndc.hpp
epoch/ayla_gl/samples/: CMakeLists.txt
epoch/ayla_gl/samples/fps_camera/: CMakeLists.txt  main.cc
epoch/ayla_gl/samples/hello_world/: CMakeLists.txt  main.cc
epoch/ayla_gl/samples/text_renderer/: CMakeLists.txt  main.cc
epoch/ayla_gl/samples/trackball_camera/: CMakeLists.txt  main.cc
epoch/ayla_gl/shaders/: phong_shading.fs  phong_shading.vs  simple.fs  simple.vs  tension_map.fs  tension_map.vs
epoch/ayla_gl/src/ayla_gl/: camera_to_viewport_ray.cc  fps_camera.cc  load_texture.cc  print_opengl_error.cc  skybox.cc  texture_2d.cc  texture_cube_map.cc  trackball_camera.cc  world_to_ndc.cc
epoch/lucca/: CMakeLists.txt  README.md
epoch/lucca/include/lucca/: api.hpp  camera.hpp  config.hpp  enum_flags.hpp  render_target.hpp  viewport.hpp
epoch/lucca/src/lucca/: camera.cc  viewport.cc
epoch/lucca_qt/: CMakeLists.txt  README.md
epoch/lucca_qt/include/lucca_qt/: api.hpp  async.hpp  config.hpp  make_qt_action_tool.hpp  qt_action_tool.hpp  qt_action_tool_group.hpp  qt_event_dispatcher.hpp  qt_mdi_area_view.hpp  qt_mdi_sub_window_view.hpp  qt_opengl_view.hpp  qt_tool_box.hpp  read_shader_resource.hpp  simple_multi_view_document.hpp
epoch/lucca_qt/src/lucca_qt/: async.cc  qt_action_tool.cc  qt_action_tool_group.cc  qt_event_dispatcher.cc  qt_mdi_area_view.cc  qt_mdi_sub_window_view.cc  qt_opengl_view.cc  qt_tool_box.cc  read_shader_resource.cc  simple_multi_view_document.cc
vize/: CMakeLists.txt  README.md
vize/include/vize/: config.hpp
vize/include/vize/application/: application.hpp  application_launcher.hpp  import_volume_launcher.hpp  open_volume_launcher.hpp  ui_colors.hpp
vize/include/vize/document/: sub_view.hpp  sub_view_state.hpp  volume_document.hpp
vize/include/vize/factory/: async_volume_document_factory.hpp  async_volume_factory.hpp  document_factory.hpp  main_window_factory.hpp  sub_view_factory.hpp  volume_factory.hpp  volume_painter_factory.hpp
vize/include/vize/image/: dicom_image.hpp  tiff_image.hpp
vize/include/vize/model/: color.hpp  volume.hpp  volume_histogram.hpp
vize/include/vize/opengl/: gl_framebuffer_texture_2d.hpp  gl_ndc_rectangle.hpp  gl_rgb_cube_renderer.hpp  gl_transfer_function_texture.hpp  gl_volume_texture.hpp  gl_volume_texture_cache.hpp
vize/include/vize/painter/: volume_mpr.hpp  volume_painter.hpp  volume_painter_proxy.hpp  volume_raycaster.hpp
vize/include/vize/serialization/: color_serializer.hpp  control_point_serializer.hpp  multi_view_document_serializer.hpp  transfer_function_serializer.hpp  vize_serializer.hpp  volume_document_serializer.hpp  volume_painter_serializer.hpp  volume_serializer.hpp
vize/include/vize/shader/: colored_vertex_program.hpp  default_shaders_directory.hpp  mpr_ray_casting_program.hpp
vize/include/vize/tool/: descriptors.hpp  import_dicom_tool.hpp  import_raw_tool.hpp  import_tiff_tool.hpp  import_volume_tool.hpp  light_switch_tool.hpp  model_transformer_switch_tool.hpp  open_document_tool.hpp  save_as_document_tool.hpp  show_about_tool.hpp
vize/include/vize/ui/: main_window.hpp  main_window_builder.hpp  model_transformer_widget.hpp  mpr_config_widget.hpp  sample_step_widget.hpp  transfer_function_editor_widget.hpp
vize/resources/: resource.h  resources.qrc  resources.rc
vize/resources/shaders/: colored_vertex.fs  colored_vertex.vs  mpr_ray_casting.fs  mpr_ray_casting.vs
vize/src/vize/: main.cc
vize/src/vize/application/: application.cc  import_volume_launcher.cc  open_volume_launcher.cc  ui_colors.cc
vize/src/vize/document/: sub_view.cc  sub_view_state.cc  volume_document.cc
vize/src/vize/factory/: async_volume_document_factory.cc  async_volume_factory.cc  document_factory.cc  main_window_factory.cc  sub_view_factory.cc  volume_factory.cc  volume_painter_factory.cc
vize/src/vize/image/: dicom_image.cc  tiff_image.cc
vize/src/vize/model/: color.cc  volume.cc  volume_histogram.cc
vize/src/vize/opengl/: gl_framebuffer_texture_2d.cc  gl_ndc_rectangle.cc  gl_rgb_cube_renderer.cc  gl_transfer_function_texture.cc  gl_volume_texture.cc  gl_volume_texture_cache.cc
vize/src/vize/painter/: volume_painter.cc  volume_painter_proxy.cc
vize/src/vize/serialization/: color_serializer.cc  control_point_serializer.cc  multi_view_document_serializer.cc  transfer_function_serializer.cc  vize_serializer.cc  volume_document_serializer.cc  volume_painter_serializer.cc  volume_serializer.cc
vize/src/vize/shader/: colored_vertex_program.cc  default_shaders_directory.cc  mpr_ray_casting_program.cc
vize/src/vize/tool/: import_dicom_tool.cc  import_raw_tool.cc  import_tiff_tool.cc  import_volume_tool.cc  light_switch_tool.cc  model_transformer_switch_tool.cc  open_document_tool.cc  save_as_document_tool.cc  (+1 more)
vize/ui/: main_window.ui  model_transformer_widget.ui  mpr_config_widget.ui  sample_step_widget.ui  transfer_function_editor_widget.ui
(+215 files in other folders)
